docs: reorganizar documentación en carpeta docs/ y simplificar configuración
- Mover documentación a docs/setup/ y docs/api/
- Eliminar perfiles de configuración múltiples
- Unificar en application.properties con soporte .env
- Mejorar estructura y navegación de documentación